## Process this file through Automake to create Makefile.in -*- Makefile -*-

olndir = $(includedir)/oln
nobase_oln_HEADERS =						\
								\
  color/rgb.hh							\
								\
  core/1d/aliases.hh						\
  core/1d/array1d.hh						\
  core/1d/dpoint1d.hh						\
  core/1d/fwd_decls.hh						\
  core/1d/image1d.hh						\
  core/1d/neighb1d.hh						\
  core/1d/point1d.hh						\
  core/1d/topo1d.hh						\
  core/1d/window1d.hh						\
								\
  core/2d/aliases.hh						\
  core/2d/array2d.hh						\
  core/2d/dpoint2d.hh						\
  core/2d/fwd_decls.hh						\
  core/2d/image2d.hh						\
  core/2d/neighb2d.hh						\
  core/2d/point2d.hh						\
  core/2d/topo2d.hh						\
  core/2d/window2d.hh						\
								\
  core/3d/aliases.hh						\
  core/3d/array3d.hh						\
  core/3d/dpoint3d.hh						\
  core/3d/fwd_decls.hh						\
  core/3d/image3d.hh						\
  core/3d/neighb3d.hh						\
  core/3d/point3d.hh						\
  core/3d/topo3d.hh						\
  core/3d/window3d.hh						\
								\
  core/abstract/image/accessibility/hierarchy.hh		\
								\
  core/abstract/image/bbox/hierarchy.hh				\
								\
  core/abstract/image/dimension/1d.hh				\
  core/abstract/image/dimension/2d.hh				\
  core/abstract/image/dimension/3d.hh				\
  core/abstract/image/dimension/hierarchy.hh			\
								\
  core/abstract/image/hybrid/classical.hh			\
								\
  core/abstract/image/mutability/hierarchy.hh			\
								\
  core/abstract/image/neighborhood/hierarchy.hh			\
								\
  core/abstract/image/type/binary.hh				\
  core/abstract/image/type/color.hh				\
  core/abstract/image/type/data.hh				\
  core/abstract/image/type/grey_level.hh			\
  core/abstract/image/type/hierarchy.hh				\
  core/abstract/image/type/integre.hh				\
  core/abstract/image/type/label.hh				\
								\
  core/abstract/image/all.hh					\
  core/abstract/image/hierarchies.hh				\
								\
  core/abstract/internal/image_impl.hh				\
								\
  core/abstract/point_set/all.hh				\
  core/abstract/point_set/hierarchies.hh			\
  core/abstract/point_set/point_set_being_connected.hh		\
  core/abstract/point_set/point_set_being_random_accessible.hh	\
  core/abstract/point_set/point_set_having_bbox.hh		\
  core/abstract/point_set/point_set_having_known_size.hh	\
								\
  core/abstract/topology/all.hh					\
  core/abstract/topology/hierarchies.hh				\
  core/abstract/topology/topology_being_random_accessible.hh	\
  core/abstract/topology/topology_having_bbox.hh		\
  core/abstract/topology/topology_having_neighborhood.hh	\
  core/abstract/topology/topology_having_subset.hh		\
								\
  core/abstract/any.hh						\
  core/abstract/array.hh					\
  core/abstract/bbox.hh						\
  core/abstract/dpoint.hh					\
  core/abstract/entry.hh					\
  core/abstract/fwd_decls.hh					\
  core/abstract/grid.hh						\
  core/abstract/image.hh					\
  core/abstract/iterator.hh					\
  core/abstract/iterator_on_points.hh				\
  core/abstract/neighborhood.hh					\
  core/abstract/point.hh					\
  core/abstract/point_set.hh					\
  core/abstract/topology.hh					\
  core/abstract/value.hh					\
  core/abstract/window.hh					\
								\
  core/automatic/image/image.hh					\
  core/automatic/image/image1d.hh				\
  core/automatic/image/image2d.hh				\
  core/automatic/image/image3d.hh				\
  core/automatic/image/mutable_image.hh				\
  core/automatic/image/mutable_image1d.hh			\
  core/automatic/image/mutable_image2d.hh			\
  core/automatic/image/mutable_image3d.hh			\
  core/automatic/image/image_being_random_accessible.hh		\
  core/automatic/image/image_having_neighborhood.hh		\
  core/automatic/image/image_having_neighborhood.hh		\
  core/automatic/impl.hh					\
  core/automatic/topology/topology_being_random_accessible.hh	\
  core/automatic/topology/topology_having_bbox.hh		\
  core/automatic/topology/topology_having_neighborhood.hh	\
  core/automatic/topology/topology_having_subset.hh		\
								\
  core/gen/bbox.hh						\
  core/gen/bbox_bkd_piter.hh					\
  core/gen/bbox_fwd_piter.hh					\
  core/gen/bkd_niter_neighb.hh					\
  core/gen/bkd_piter_bbox.hh					\
  core/gen/bkd_qiter_win.hh					\
  core/gen/fwd_decls.hh						\
  core/gen/fwd_niter_neighb.hh					\
  core/gen/fwd_piter_bbox.hh					\
  core/gen/fwd_qiter_win.hh					\
  core/gen/piter_isubset.hh					\
  core/gen/grid.hh						\
  core/gen/mapimage.hh						\
  core/gen/neighb.hh						\
  core/gen/topo_add_nbh.hh					\
  core/gen/topo_bbox.hh						\
  core/gen/topo_lbbox.hh					\
  core/gen/window.hh						\
								\
  core/spe/col.hh						\
  core/spe/row.hh						\
  core/spe/slice.hh						\
								\
  core/type_fun/ch_value.hh					\
  core/type_fun/plain.hh					\
  core/type_fun/slice.hh					\
								\
  core/internal/bbox_bkd_piter.hh				\
  core/internal/bbox_fwd_piter.hh				\
  core/internal/dpoint_nd.hh					\
  core/internal/point_nd.hh					\
  core/internal/topology_morpher.hh				\
  core/internal/tracked_ptr.hh					\
								\
  core/aliases.hh						\
  core/case.hh							\
  core/fwd_decls.hh						\
  core/image_entry.hh						\
  core/iterator_vtypes.hh					\
  core/macros.hh						\
  core/neighborhood_entry.hh					\
  core/point_set_entry.hh					\
  core/traits.hh						\
  core/traits_id.hh						\
  core/topology_entry.hh					\
  core/typedefs.hh						\
  core/type.hh							\
								\
  debug/print.hh						\
  debug/track.hh						\
  debug/typename.hh						\
								\
  io/pnm.hh							\
								\
  level/fill.hh							\
								\
  morpher/internal/image_extension.hh				\
  morpher/internal/image_value_morpher.hh			\
								\
  morpher/add_neighborhood.hh					\
  morpher/fwd_decls.hh						\
  morpher/identity.hh						\
  morpher/tags.hh						\
  morpher/slice.hh						\
  morpher/stack.hh						\
  morpher/thru_fun.hh						\
  morpher/thru_mfun.hh						\
  morpher/value_cast.hh						\
								\
  value/accessor.hh						\
  value/all.hh							\
  value/default.hh						\
  value/greylevel.hh						\
  value/tags.hh							\
								\
  basics1d.hh							\
  basics2d.hh							\
  basics3d.hh
