## Process this file through Automake to create Makefile.in -*- Makefile -*-

olndir = $(includedir)/oln
nobase_oln_HEADERS =							\
									\
  core/1d/array1d.hh							\
  core/1d/dpoint1d.hh							\
  core/1d/image1d.hh							\
  core/1d/neighb1d.hh							\
  core/1d/point1d.hh							\
  core/1d/window1d.hh							\
									\
  core/2d/array2d.hh							\
  core/2d/dpoint2d.hh							\
  core/2d/image2d.hh							\
  core/2d/neighb2d.hh							\
  core/2d/point2d.hh							\
  core/2d/window2d.hh							\
									\
  core/3d/array3d.hh							\
  core/3d/dpoint3d.hh							\
  core/3d/image3d.hh							\
  core/3d/neighb3d.hh							\
  core/3d/point3d.hh							\
  core/3d/window3d.hh							\
									\
  core/gen/bkd_viter_lut.hh						\
  core/gen/fwd_viter_lut.hh						\
  core/gen/piter_isubset.hh						\
  core/gen/piter_isubset.hh						\
  core/gen/mapimage.hh							\
  core/gen/neighb.hh							\
  core/gen/pw_value.hh							\
  core/gen/window.hh							\
									\
  core/internal/dpoint_nd.hh						\
  core/internal/tracked_ptr.hh						\
									\
  core/case.hh								\
  core/lookup_table.hh							\
  core/traits.hh							\
  core/traits_id.hh							\
									\
  debug/print.hh							\
  debug/track.hh							\
  debug/typename.hh							\
									\
  io/pnm.hh								\
									\
  level/apply.hh							\
  level/assign.hh							\
  level/clone.hh							\
  level/fill.hh								\
									\
  morpher/internal/image_extension.hh					\
  morpher/internal/image_value_morpher.hh				\
									\
  morpher/add_neighborhood.hh						\
  morpher/count_rw.hh							\
  morpher/fwd_decls.hh							\
  morpher/identity.hh							\
  morpher/tags.hh							\
  morpher/slice.hh							\
  morpher/stack.hh							\
  morpher/stack_rw.hh							\
  morpher/thru_fun.hh							\
  morpher/thru_mfun.hh							\
  morpher/two_way.hh							\
  morpher/two_way_rw.hh							\
  morpher/value_cast.hh							\
  morpher/with_lut.hh							\
									\
  value/color/rgb.hh							\
									\
  value/accessor.hh							\
  value/all.hh								\
  value/bin.hh								\
  value/default.hh							\
  value/greylevel.hh							\
  value/lut_value_proxy.hh						\
  value/proxy.hh							\
  value/rw_counter.hh							\
  value/tags.hh								\
  value/two_way.hh							\
  value/two_way.hxx							\
									\
  basics1d.hh								\
  basics2d.hh								\
  basics3d.hh
