## Process this file through Automake to create Makefile.in -*- Makefile -*-

olndir = $(includedir)/oln
nobase_oln_HEADERS =							\
									\
  core/1d/array1d.hh							\
  core/1d/dpoint1d.hh							\
  core/1d/image1d.hh							\
  core/1d/neighb1d.hh							\
  core/1d/point1d.hh							\
  core/1d/window1d.hh							\
									\
  core/2d/array2d.hh							\
  core/2d/dpoint2d.hh							\
  core/2d/image2d.hh							\
  core/2d/neighb2d.hh							\
  core/2d/point2d.hh							\
  core/2d/window2d.hh							\
									\
  core/3d/array3d.hh							\
  core/3d/dpoint3d.hh							\
  core/3d/image3d.hh							\
  core/3d/neighb3d.hh							\
  core/3d/point3d.hh							\
  core/3d/window3d.hh							\
									\
  core/gen/bkd_viter_lut.hh						\
  core/gen/fwd_viter_lut.hh						\
  core/gen/mapimage.hh							\
  core/gen/neighb.hh							\
  core/gen/pw_value.hh							\
  core/gen/window.hh							\
									\
  core/internal/tracked_ptr.hh						\
									\
  core/lookup_table.hh							\
									\
  debug/print.hh							\
  debug/track.hh							\
  debug/typename.hh							\
									\
  io/pnm.hh								\
									\
  level/apply.hh							\
  level/assign.hh							\
  level/clone.hh							\
  level/fill.hh								\
									\
  morpher/fwd_decls.hh							\
  morpher/slice.hh							\
  morpher/thru_mfun.hh							\
  morpher/two_way.hh							\
  morpher/two_way_rw.hh							\
  morpher/with_lut.hh							\
									\
  value/color/rgb.hh							\
									\
  value/accessor.hh							\
  value/all.hh								\
  value/bin.hh								\
  value/default.hh							\
  value/graylevel.hh							\
  value/gray_level.hh							\
  value/lut_value_proxy.hh						\
  value/proxy.hh							\
  value/rw_counter.hh							\
  value/tags.hh								\
  value/two_way.hh							\
  value/two_way.hxx
