# Copyright (C) 2009, 2010 EPITA Research and Development Laboratory
# (LRDE).
#
# This file is part of Olena.
#
# Olena is free software: you can redistribute it and/or modify it under
# the terms of the GNU General Public License as published by the Free
# Software Foundation, version 2 of the License.
#
# Olena is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
# General Public License for more details.
#
# You should have received a copy of the GNU General Public License
# along with Olena.  If not, see <http://www.gnu.org/licenses/>.

include $(top_srcdir)/scribo/scribo.mk

SUBDIRS =					\
  binarization 					\
  contest 					\
  debug 					\
  primitive 					\
  filter 					\
  misc 						\
  postprocessing 				\
  preprocessing 				\
  table	 					\
  text 						\
  toolchain



utilexec_PROGRAMS =


if HAVE_TESSERACT

    utilexec_PROGRAMS	    += pbm_text_in_doc
    pbm_text_in_doc_SOURCES  = pbm_text_in_doc.cc
    pbm_text_in_doc_CPPFLAGS = $(AM_CPPFLAGS) \
			       $(TESSERACT_CPPFLAGS) \
			       $(TIFF_CPPFLAGS) \
			       -I$(top_builddir)
    pbm_text_in_doc_LDFLAGS  = $(AM_LDFLAGS) \
			       $(TESSERACT_LDFLAGS) \
			       $(TIFF_LDFLAGS) \
			       -lpthread

endif HAVE_TESSERACT


if HAVE_MAGICKXX

    utilexec_PROGRAMS		   += text_in_doc_preprocess
    text_in_doc_preprocess_SOURCES  = text_in_doc_preprocess.cc
    text_in_doc_preprocess_CPPFLAGS = $(AM_CPPFLAGS) \
				      $(MAGICKXX_CPPFLAGS)
    text_in_doc_preprocess_LDFLAGS  = $(AM_LDFLAGS) \
			      	      -lpthread \
				      $(MAGICKXX_LDFLAGS)


    utilexec_PROGRAMS	    += text_in_picture
    text_in_picture_SOURCES  = text_in_picture.cc
    text_in_picture_CPPFLAGS = $(AM_CPPFLAGS) \
			       $(MAGICKXX_CPPFLAGS)
    text_in_picture_LDFLAGS  = $(AM_LDFLAGS) \
		      	       -lpthread \
			       $(MAGICKXX_LDFLAGS)

if HAVE_TESSERACT

    utilexec_PROGRAMS			+= text_recognition_in_picture
    text_recognition_in_picture_SOURCES  = text_recognition_in_picture.cc
    text_recognition_in_picture_CPPFLAGS = $(AM_CPPFLAGS) \
	  			           $(TESSERACT_CPPFLAGS) \
			       		   $(TIFF_CPPFLAGS) \
			       		   $(MAGICKXX_CPPFLAGS) \
					   -I$(top_builddir)
    text_recognition_in_picture_LDFLAGS  = $(AM_LDFLAGS) \
		      	       		   -lpthread \
	  			           $(TESSERACT_LDFLAGS) \
			       		   $(TIFF_LDFLAGS) \
					   $(MAGICKXX_LDFLAGS)

endif HAVE_TESSERACT

endif HAVE_MAGICKXX


# Generated by configure from scribo-cli.in.
dist_bin_SCRIPTS = scribo-cli

do_subst = sed -e 's|@utilexecdir[@]|$(utilexecdir)|g'

scribo-cli: $(srcdir)/scribo-cli.in Makefile
	rm -f $@ $@.tmp
	srcdir=''; \
	test -f ./$@.in || srcdir=$(srcdir)/; \
	$(do_subst) $${srcdir}$@.in >$@.tmp
	chmod +x $@.tmp
	chmod a-w $@.tmp
	mv $@.tmp $@

CLEANFILES = $(bin_SCRIPTS)

EXTRA_DIST = scribo-cli.in
