# Copyright (C) 2009, 2010, 2011, 2013 EPITA Research and Development
# Laboratory (LRDE).
#
# This file is part of Olena.
#
# Olena is free software: you can redistribute it and/or modify it under
# the terms of the GNU General Public License as published by the Free
# Software Foundation, version 2 of the License.
#
# Olena is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
# General Public License for more details.
#
# You should have received a copy of the GNU General Public License
# along with Olena.  If not, see <http://www.gnu.org/licenses/>.

include $(top_srcdir)/scribo/scribo.mk

SUBDIRS =					\
  binarization 					\
  contest 					\
  debug 					\
  primitive 					\
  filter 					\
  misc 						\
  postprocessing 				\
  preprocessing 				\
  table	 					\
  text 						\
  toolchain					\
  util



utilexec_PROGRAMS =


if HAVE_MAGICKXX

if HAVE_TESSERACT

    utilexec_PROGRAMS	    += pbm_text_in_doc
    pbm_text_in_doc_CPPFLAGS = $(AM_CPPFLAGS) \
			       $(TESSERACT_CPPFLAGS) \
			       $(TIFF_CPPFLAGS) \
			       $(MAGICKXX_CPPFLAGS) \
			       -I$(top_builddir)
    pbm_text_in_doc_LDFLAGS  = $(AM_LDFLAGS) \
			       $(TESSERACT_LDFLAGS) \
			       $(TIFF_LDFLAGS) \
			       $(MAGICKXX_LDFLAGS) \
			       -lpthread

endif HAVE_TESSERACT

    utilexec_PROGRAMS		   += text_in_doc_preprocess
    text_in_doc_preprocess_CPPFLAGS = $(AM_CPPFLAGS) \
				      $(MAGICKXX_CPPFLAGS)
    text_in_doc_preprocess_LDFLAGS  = $(AM_LDFLAGS) \
			      	      -lpthread \
				      $(MAGICKXX_LDFLAGS)


    utilexec_PROGRAMS	    += text_in_picture
    text_in_picture_CPPFLAGS = $(AM_CPPFLAGS) \
			       $(MAGICKXX_CPPFLAGS)
    text_in_picture_LDFLAGS  = $(AM_LDFLAGS) \
		      	       -lpthread \
			       $(MAGICKXX_LDFLAGS)


    utilexec_PROGRAMS	    	 += text_in_picture_dual
    text_in_picture_dual_SOURCES  = text_in_picture_dual.cc
    text_in_picture_dual_CPPFLAGS = $(AM_CPPFLAGS) \
				    $(MAGICKXX_CPPFLAGS)
    text_in_picture_dual_LDFLAGS  = $(AM_LDFLAGS) \
				    -lpthread \
				    $(MAGICKXX_LDFLAGS)


if HAVE_TESSERACT

    utilexec_PROGRAMS			+= text_recognition_in_picture
    text_recognition_in_picture_CPPFLAGS = $(AM_CPPFLAGS) \
	  			           $(TESSERACT_CPPFLAGS) \
			       		   $(TIFF_CPPFLAGS) \
			       		   $(MAGICKXX_CPPFLAGS) \
					   -I$(top_builddir)
    text_recognition_in_picture_LDFLAGS  = $(AM_LDFLAGS) \
	  			           $(TESSERACT_LDFLAGS) \
			       		   $(TIFF_LDFLAGS) \
					   $(MAGICKXX_LDFLAGS)

if HAVE_QT

    utilexec_PROGRAMS	   += content_in_doc
    content_in_doc_CPPFLAGS = $(AM_CPPFLAGS) \
			      $(TESSERACT_CPPFLAGS) \
			      $(TIFF_CPPFLAGS) \
			      $(MAGICKXX_CPPFLAGS) \
			      $(QT_CPPFLAGS) -DHAVE_QT
    content_in_doc_CXXFLAGS = $(AM_CXXFLAGS) \
		  	      $(QT_CXXFLAGS)
    content_in_doc_LDFLAGS  = $(AM_LDFLAGS) \
			      $(TESSERACT_LDFLAGS) \
			      $(TIFF_LDFLAGS) \
			      $(MAGICKXX_LDFLAGS) \
			      $(QT_LDFLAGS) \
			      -lpthread
    content_in_doc_LDADD    = $(LDADD) \
			      $(QT_LIBS)

    utilexec_PROGRAMS	   += content_in_hdoc
    content_in_hdoc_CPPFLAGS = $(AM_CPPFLAGS) \
			      $(TESSERACT_CPPFLAGS) \
			      $(TIFF_CPPFLAGS) \
			      $(MAGICKXX_CPPFLAGS) \
			      $(QT_CPPFLAGS) -DHAVE_QT
    content_in_hdoc_CXXFLAGS = $(AM_CXXFLAGS) \
		  	      $(QT_CXXFLAGS)
    content_in_hdoc_LDFLAGS  = $(AM_LDFLAGS) \
			      $(TESSERACT_LDFLAGS) \
			      $(TIFF_LDFLAGS) \
			      $(MAGICKXX_LDFLAGS) \
			      $(QT_LDFLAGS) \
			      -lpthread
    content_in_hdoc_LDADD    = $(LDADD) \
			      $(QT_LIBS)


    utilexec_PROGRAMS	   += non_text_components
    non_text_components_CPPFLAGS = $(AM_CPPFLAGS) \
			      $(TESSERACT_CPPFLAGS) \
			      $(TIFF_CPPFLAGS) \
			      $(MAGICKXX_CPPFLAGS) \
			      $(QT_CPPFLAGS)
    non_text_components_CXXFLAGS = $(AM_CXXFLAGS) \
		  	      $(QT_CXXFLAGS)
    non_text_components_LDFLAGS  = $(AM_LDFLAGS) \
			      $(TESSERACT_LDFLAGS) \
			      $(TIFF_LDFLAGS) \
			      $(MAGICKXX_LDFLAGS) \
			      $(QT_LDFLAGS) \
			      -lpthread
    non_text_components_LDADD    = $(LDADD) \
			      $(QT_LIBS)


endif HAVE_QT


endif HAVE_TESSERACT

endif HAVE_MAGICKXX


# Generated by configure from scribo-cli.in.
dist_bin_SCRIPTS = scribo-cli

do_subst = sed -e 's|@utilexecdir[@]|$(utilexecdir)|g'

scribo-cli: $(srcdir)/scribo-cli.in Makefile
	rm -f $@ $@.tmp
	srcdir=''; \
	test -f ./$@.in || srcdir=$(srcdir)/; \
	$(do_subst) $${srcdir}$@.in >$@.tmp
	chmod +x $@.tmp
	chmod a-w $@.tmp
	mv $@.tmp $@

CLEANFILES = $(dist_bin_SCRIPTS)


EXTRA_DIST = scribo-cli.in
