## Process this file through Automake to create Makefile.in -*- Makefile -*-

stcdir = $(includedir)/stc
nobase_stc_HEADERS =				\
  any.hh					\
  entry.hh					\
  exact.hh					\
  find_exact.hh					\
  scoop.hh					\
  valist_aggregator.hh				\
						\
  internal/extract_vtype_from_list.hh

# Old code.
EXTRA_DIST = was.scoop.hh
